78 import data from external apis (#89)
Co-authored-by: samypr100 <3933065+samypr100@users.noreply.github.com>